src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__landing__landing_welcome_120x40_ascii.snap
---
source: src/tui/snapshot_tests/landing.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                       __  __    _    _____ ____ _____ ____   ___                                       "
"                                      |  \/  |  / \  | ____/ ___|_   _|  _ \ / _ \                                      "
"                                     | |\/| | / _ \ |  _| \___ \ | | | |_) | | | |                                      "
"                                     | |  | |/ ___ \| |___ ___) || | |  _ <| |_| |                                      "
"                                      |_|  |_/_/   \_\_____|____/ |_| |_| \_\\___/                                      "
"                                                        v0.31.2                                                         "
"                                                                                                                        "
"                                     [d]  Dashboard           [r]  Roadmap                                              "
"                                     [i]  Create Issue        [h]  Milestone Review                                     "
"                                     [m]  Create Milestone    [t]  Teams                                                "
"                                     [s]  Project Stats       [q]  Quit                                                 "
"                                     [p]  PRD                                                                           "
"                                                                                                                        "
"            ╔══════════════════════════════════[ What's New in v0.31.2 ]═══════════════════════════════════╗            "
"            ║  [Fixed] **PRD `[R]` reset** now requires a second `R` to confirm before deleting the local …║            "
"            ║  [Fixed] **Kill-session confirm** no longer treats `Enter` as "kill" — only `y` confirms, ma…║            "
"            ║  [Fixed] **Adapt follow-up** number keys `1-9` now only move the selection; `Enter` is the s…║            "
"            ║  [Fixed] **Adapt wizard cache-clear** (`x`/`Del`) now requires a second press to confirm bef…║            "
"            ╚══════════════════════════════ Press [n] for full release notes ══════════════════════════════╝            "
"                                                                                                                        "
"                                     <q> quit  <n> notes                                                                "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
