src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__landing__landing_welcome_120x40_nerd_font.snap
---
source: src/tui/snapshot_tests/landing.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                              ███╗   ███╗ █████╗ ███████╗███████╗████████╗██████╗  ██████╗                              "
"                             ████╗ ████║██╔══██╗██╔════╝██╔════╝╚══██╔══╝██╔══██╗██╔═══██╗                              "
"                             ██╔████╔██║███████║█████╗  ███████╗   ██║   ██████╔╝██║   ██║                              "
"                             ██║╚██╔╝██║██╔══██║██╔══╝  ╚════██║   ██║   ██╔══██╗██║   ██║                              "
"                             ██║ ╚═╝ ██║██║  ██║███████╗███████║   ██║   ██║  ██║╚██████╔╝                              "
"                              ╚═╝     ╚═╝╚═╝  ╚═╝╚══════╝╚══════╝   ╚═╝   ╚═╝  ╚═╝ ╚═════╝                              "
"                                                        v0.29.5                                                         "
"                                                                                                                        "
"                                     [d]  Dashboard           [r]  Roadmap                                              "
"                                     [i]  Create Issue        [h]  Milestone Review                                     "
"                                     [m]  Create Milestone    [t]  Teams                                                "
"                                     [s]  Project Stats       [q]  Quit                                                 "
"                                     [p]  PRD                                                                           "
"                                                                                                                        "
"            ╔══════════════════════════════════[ What's New in v0.29.5 ]═══════════════════════════════════╗            "
"            ║  [Added] Per-provider cost / token / quota emission (milestone v0.29.5 Level 1): the Claude …║            "
"            ║  [Added] Per-frame token count clamped at `TOKEN_COUNT_CAP = 100_000_000` across all four pa…║            "
"            ║  [Added] Ollama `num_ctx` surfaced in TUI Settings — new `FieldSchema` entry (Int 0..1_000_0…║            "
"            ║  [Added] MiniMax `--force-quota` spawns emit a structured `StreamEvent::Warning { code: "quo…║            "
"            ╚══════════════════════════════ Press [n] for full release notes ══════════════════════════════╝            "
"                                                                                                                        "
"                                     <q> quit  <n> notes                                                                "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
