src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__landing__landing_welcome_180x48_nerd_font.snap
---
source: src/tui/snapshot_tests/landing.rs
expression: terminal.backend()
---
"                                                            ███╗   ███╗ █████╗ ███████╗███████╗████████╗██████╗  ██████╗                                                            "
"                                                           ████╗ ████║██╔══██╗██╔════╝██╔════╝╚══██╔══╝██╔══██╗██╔═══██╗                                                            "
"                                                           ██╔████╔██║███████║█████╗  ███████╗   ██║   ██████╔╝██║   ██║                                                            "
"                                                           ██║╚██╔╝██║██╔══██║██╔══╝  ╚════██║   ██║   ██╔══██╗██║   ██║                                                            "
"                                                           ██║ ╚═╝ ██║██║  ██║███████╗███████║   ██║   ██║  ██║╚██████╔╝                                                            "
"                                                            ╚═╝     ╚═╝╚═╝  ╚═╝╚══════╝╚══════╝   ╚═╝   ╚═╝  ╚═╝ ╚═════╝                                                            "
"                                                                                      v0.29.5                                                                                       "
"                                                                                                                                                                                    "
"                                                                   [d]  Dashboard           [r]  Roadmap                                                                            "
"                                                                   [i]  Create Issue        [h]  Milestone Review                                                                   "
"                                                                   [m]  Create Milestone    [t]  Teams                                                                              "
"                                                                   [s]  Project Stats       [q]  Quit                                                                               "
"                                                                   [p]  PRD                                                                                                         "
"                                                                                                                                                                                    "
"╔═══════════════════════════════════════════════════════════════════════════[ Release Console v0.29.5 ]════════════════════════════════════════════════════════════════════════════╗"
"║ changes 38   refs 29   categories 3   date 2026-05-29                                                                                                                            ║"
"║                                                                                                                                                                                  ║"
"║┌Internet───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌Link───────────────────────────────────────────────────┐║"
"║│                                                                                                                       ││state standby                                          │║"
"║│                                                                                                                       ││press [w] measure                                      │║"
"║│                                                                                                                       ││mode  manual                                           │║"
"║│⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀││sample paused                                          │║"
"║│                                                                                                                       ││                                                       │║"
"║│                                                                                                                       ││                                                       │║"
"║│                                                                                                                       ││                                                       │║"
"║│                                                                                                                       ││                                                       │║"
"║└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└───────────────────────────────────────────────────────┘║"
"║┌Mix───────────────────────────────────────────────────────────────────────────┐┌Ref Trend───────────────────────────────────────────────────────────────────────────────────────┐║"
"║│███                                                                           ││      ▄               █                                                                         │║"
"║│███                                                                           ││      █              ▆█                                                                         │║"
"║│███                                                                           ││      █              ██                                                                         │║"
"║│███ ▄▄▄                                                                       ││ ▄    █              ██                                                                         │║"
"║│███ ███                                                                       ││ █  ▇ █      ▇▃ ▇  ▇▃██                                                                         │║"
"║│24█ 10█ █4█                                                                   ││ █ ▇█▅█▃     ██ █  ████                                                                         │║"
"║│Add Fix Chg Per Doc                                                           ││▇█▃█████▇ ▅ ▇██▁█▃▃████                                                                         │║"
"║└──────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────────────┘║"
"║┌Highlights──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐║"
"║│  [Added] Per-provider cost / token / quota emission (milestone v0.29.5 Level 1): the Claude stream-json parser computes `cost_usd` per assistant frame from new `claude_pricing│║"
"║│  [Added] Per-frame token count clamped at `TOKEN_COUNT_CAP = 100_000_000` across all four parsers (Claude, Codex, OpenCode, OpenAI-compatible SSE); values above the cap clamp │║"
"║│  [Added] Ollama `num_ctx` surfaced in TUI Settings — new `FieldSchema` entry (Int 0..1_000_000, step 1024) visible only for Ollama-kind agents; `docs/configuration.md` agents │║"
"║│  [Added] MiniMax `--force-quota` spawns emit a structured `StreamEvent::Warning { code: "quota_forced" }` event; `QuotaState` bumped to schema v2 (v1 files promoted via read s│║"
"║│                                                                                                                                                                                │║"
"║└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘║"
"╚════════════════════════════════════════════════════════════════════════ Press [n] for full release notes ════════════════════════════════════════════════════════════════════════╝"
"                                                                                                                                                                                    "
"<q> quit  <n> notes  <w> net                                                                                                                                                        "
"                                                                                                                                                                                    "
"                                                                                                                                                                                    "
