src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__landing__landing_welcome_60x20_ascii.snap
---
source: src/tui/snapshot_tests/landing.rs
expression: terminal.backend()
---
"                                                            "
"         __  __    _    _____ ____ _____ ____   ___         "
"        |  \/  |  / \  | ____/ ___|_   _|  _ \ / _ \        "
"       | |\/| | / _ \ |  _| \___ \ | | | |_) | | | |        "
"       | |  | |/ ___ \| |___ ___) || | |  _ <| |_| |        "
"        |_|  |_/_/   \_\_____|____/ |_| |_| \_\\___/        "
"                          v0.31.5                           "
"                                                            "
"                   [d]  Dashboard                           "
"                   [i]  Create Issue                        "
"                   [m]  Create Milestone                    "
"                   [s]  Project Stats                       "
"                   [p]  PRD                                 "
"                   [r]  Roadmap                             "
"                   [h]  Milestone Review                    "
"                   [t]  Teams                               "
"                   [q]  Quit                                "
"                                                            "
"                   <q> quit  <n> notes                      "
"                                                            "
