src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__landing__landing_welcome_80x24_ascii.snap
---
source: src/tui/snapshot_tests/landing.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                   __  __    _    _____ ____ _____ ____   ___                   "
"                  |  \/  |  / \  | ____/ ___|_   _|  _ \ / _ \                  "
"                 | |\/| | / _ \ |  _| \___ \ | | | |_) | | | |                  "
"                 | |  | |/ ___ \| |___ ___) || | |  _ <| |_| |                  "
"                  |_|  |_/_/   \_\_____|____/ |_| |_| \_\\___/                  "
"                                    v0.31.1                                     "
"                                                                                "
"                 [d]  Dashboard           [r]  Roadmap                          "
"                 [i]  Create Issue        [h]  Milestone Review                 "
"                 [m]  Create Milestone    [t]  Teams                            "
"                 [s]  Project Stats       [q]  Quit                             "
"                 [p]  PRD                                                       "
"                                                                                "
"  ╔════════════════════════[ What's New in v0.31.1 ]═════════════════════════╗  "
"  ║  [Security] Completion-gate `Command` and plugin `run` commands now exec…║  "
"  ║                                                                          ║  "
"  ║                                                                          ║  "
"  ║                                                                          ║  "
"  ╚════════════════════ Press [n] for full release notes ════════════════════╝  "
"                                                                                "
"                 <q> quit  <n> notes                                            "
"                                                                                "
