src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__landing__landing_welcome_80x24_nerd_font.snap
---
source: src/tui/snapshot_tests/landing.rs
expression: terminal.backend()
---
"                                                                                "
"          ███╗   ███╗ █████╗ ███████╗███████╗████████╗██████╗  ██████╗          "
"         ████╗ ████║██╔══██╗██╔════╝██╔════╝╚══██╔══╝██╔══██╗██╔═══██╗          "
"         ██╔████╔██║███████║█████╗  ███████╗   ██║   ██████╔╝██║   ██║          "
"         ██║╚██╔╝██║██╔══██║██╔══╝  ╚════██║   ██║   ██╔══██╗██║   ██║          "
"         ██║ ╚═╝ ██║██║  ██║███████╗███████║   ██║   ██║  ██║╚██████╔╝          "
"          ╚═╝     ╚═╝╚═╝  ╚═╝╚══════╝╚══════╝   ╚═╝   ╚═╝  ╚═╝ ╚═════╝          "
"                                    v0.29.0                                     "
"                                                                                "
"                 [d]  Dashboard           [r]  Roadmap                          "
"                 [i]  Create Issue        [h]  Milestone Review                 "
"                 [m]  Create Milestone    [t]  Teams                            "
"                 [s]  Project Stats       [q]  Quit                             "
"                 [p]  PRD                                                       "
"                                                                                "
"  ╔════════════════════════[ What's New in v0.29.0 ]═════════════════════════╗  "
"  ║  [Added] Schema-driven settings renderer behind a feature flag — one dec…║  "
"  ║  [Added] `FieldKind::FlattenedMap` schema variant — entries live at the …║  "
"  ║  [Added] `DynamicMapWidget` and `DynamicRowsWidget` — two new TUI widget…║  "
"  ║  [Added] `FieldKind::Map` and `FieldKind::VecOfStruct` schema variants +…║  "
"  ╚════════════════════ Press [n] for full release notes ════════════════════╝  "
"                                                                                "
"                 <q> quit  <n> notes                                            "
"                                                                                "
