src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__landing__landing_welcome_below_60_hides_header.snap
---
source: src/tui/snapshot_tests/landing.rs
expression: terminal.backend()
---
"                                                  "
"                                                  "
"              [d]  Dashboard                      "
"              [i]  Create Issue                   "
"              [m]  Create Milestone               "
"              [s]  Project Stats                  "
"              [p]  PRD                            "
"              [r]  Roadmap                        "
"              [h]  Milestone Review               "
"              [t]  Teams                          "
"              [q]  Quit                           "
"                                                  "
"              <q> quit  <n> notes                 "
"                                                  "
"                                                  "
"                                                  "
